--- a/content/data/config.json
+++ b/content/data/config.json
@@ -66,7 +66,7 @@
             },
             {
                 "label": "LinkedIn",
-                "url": "",
+                "url": "https://www.linkedin.com/in/daniel-felipe-diaz-rodriguez/",
                 "style": "icon",
                 "icon": "linkedin",
                 "new_window": true
