--- a/content/data/config.json
+++ b/content/data/config.json
@@ -45,7 +45,7 @@
         "social_links": [
             {
                 "label": "Twitter",
-                "url": "",
+                "url": "https://twitter.com/danieldiaz5174",
                 "style": "icon",
                 "icon": "twitter",
                 "new_window": true
