config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -33,7 +33,7 @@
                 "style": "link"
             },
             {
-                "label": "contactame",
+                "label": "Contactame",
                 "url": "/contact/",
                 "style": "link"
             }
