config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
             },
             {
                 "label": "Dribbble",
-                "url": "https://dribbble.com/",
+                "url": "https://github.com/danieldiaz13",
                 "style": "icon",
                 "icon": "dribbble",
                 "new_window": true
