config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -58,7 +58,7 @@
                 "new_window": true
             },
             {
-                "label": "Dribbble",
+                "label": "github",
                 "url": "https://github.com/danieldiaz13",
                 "style": "icon",
                 "icon": "dribbble",
