config.json: updated icon in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -61,7 +61,7 @@
                 "label": "github",
                 "url": "https://github.com/danieldiaz13",
                 "style": "icon",
-                "icon": "dribbble",
+                "icon": "github",
                 "new_window": true
             },
             {
