--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
         ]
     },
     "footer": {
-        "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"rce=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>",
+        "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"r",
         "has_social": true,
         "social_links": [
             {
