config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
         ]
     },
     "footer": {
-        "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"r",
+        "content": "&copy; Stackbit. All rights reserved. This Jamstac",
         "has_social": true,
         "social_links": [
             {
