config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,10 +23,10 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
-                "url": "/style-guide/",
-                "style": "link"
-            },
+                //"label": "Style Guide",
+                //"url": "/style-guide/",
+                //"style": "link"
+            },//
             {
                 "label": "Cursos y Certificados",
                 "url": "/about/",
