config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,9 +23,9 @@
                 "style": "link"
             },
             {
-                //"label": "Style Guide",
-                //"url": "/style-guide/",
-                //"style": "link"
+                "label": "Style Guide",
+                "url": "/style-guide/",
+                "style": "link"
             },
             {
                 "label": "Cursos y Certificados",
