--- a/content/data/config.json
+++ b/content/data/config.json
@@ -60,5 +60,5 @@
             }
         ]
     },
-    "domain": "https://daniel-diaz-r-4e06b.netlify.app"
+    "domain": "https://danieldiazweb.com/"
 }
