--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,7 +39,7 @@
         "social_links": [
             {
                 "label": "Twitter",
-                "url": "https://twitter.com/danieldiaz5174",
+                "url": "https://danieldiazweb.com/",
                 "style": "icon",
                 "icon": "twitter",
                 "new_window": true
